Changed the readme.

--- a/README
+++ b/README
@@ -1,10 +1,8 @@
 # dojo-ants
 
-FIXME: write description
+Documentation on the ants protocol is here:
 
-## Usage
-
-FIXME: write
+https://github.com/aichallenge/aichallenge/wiki
 
 ## License
 
